Fix paragraph spacing and lists

--- a/ankidoc.css
+++ b/ankidoc.css
@@ -37,38 +37,6 @@
     scrollbar-color: var(--cyan) var(--background);
 }
 
-div, dl, dt, dd, ul, ol, li, h1, h2, h3, #toctitle, .sidebarblock>.content>.title, h4, h5, h6, pre, form, p, blockquote, th, td {
-    margin:0;
-    padding:0;
-}
-
-ul, ol, dl {
-    line-height:1.6;
-    margin-bottom:1.25em;
-    list-style-position:outside;
-    font-family:inherit;
-}
-
-.subheader, .admonitionblock td.content>.title, .audioblock>.title, .exampleblock>.title, .imageblock>.title, .listingblock>.title, .literalblock>.title, .stemblock>.title, .openblock>.title, .paragraph>.title, .quoteblock>.title, table.tableblock>.title, .verseblock>.title, .videoblock>.title, .dlist>.title, .olist>.title, .ulist>.title, .qlist>.title, .hdlist>.title {
-    line-height:1.45;
-    font-weight:400;
-    margin-top:0;
-    margin-bottom:.25em
-}
-
-h1, h2, h3, #toctitle, .sidebarblock>.content>.title, h4, h5, h6 {
-    text-rendering:optimizeLegibility;
-    margin-top:1em;
-    margin-bottom:.5em;
-    line-height:1.0125em;
-}
-
-p {
-    line-height:1.6;
-    margin-bottom:1.25em;
-    text-rendering:optimizeLegibility;
-}
-
 code {
     font-family: 'Source Code Pro', monospace;
     color: var(--foreground);
@@ -144,10 +112,6 @@ th > *, td > * {
 
 .hdlist>table, .colist>table {
     border:0;
-    background:none;
-}
-
-.hdlist>table>tbody>tr, .colist>table>tbody>tr {
     background:none;
 }
 
